--- a/public/index.html
+++ b/public/index.html
@@ -98,7 +98,7 @@
           <source
                   media="(min-width: 1024px)"
                   srcset="images/desktop-image-hero-1.jpg">
-          <img src="images/desktop-image-hero-1.jpg" alt="Minimalist white wooden dining table set with white chairs and a bonsai centerpiece" class="w-full h-full object-cover">
+          <img src="images/desktop-image-hero-1.jpg" alt="Minimalist white wooden dining table set with white chairs and a bonsai centerpiece" class="w-full h-[100%] object-cover">
         </picture>
         <picture class="hero-2 hidden h-full w-full">
           <source  media="(max-width: 1024px)"          srcset="images/mobile-image-hero-2.jpg">
