--- a/public/index.html
+++ b/public/index.html
@@ -105,14 +105,14 @@
           <source
                   media="(min-width: 1024px)"
                   srcset="images/desktop-image-hero-2.jpg">
-          <img src="images/desktop-image-hero-2.jpg" alt="Modern multi-colored chairs" class="w-full h-full object-cover">
+          <img src="images/desktop-image-hero-2.jpg" alt="Modern multi-colored chairs" class="w-full h-[100%] object-cover">
         </picture>
         <picture class="hero-3 hidden h-full w-full">
           <source  media="(max-width: 1024px)"          srcset="images/mobile-image-hero-3.jpg">
           <source
                   media="(min-width: 1024px)"
                   srcset="images/desktop-image-hero-3.jpg">
-          <img src="images/desktop-image-hero-3.jpg" alt="Vintage-style tubular black chair with a sleek metal frame" class="w-full h-full object-cover">
+          <img src="images/desktop-image-hero-3.jpg" alt="Vintage-style tubular black chair with a sleek metal frame" class="w-full h-[100%] object-cover">
         </picture>
         <div class="controls absolute bg-black bottom-0 right-0 lg:translate-x-full flex cursor-pointer">
           <button class="carousel-control-prev py-4 flex items-center hover:bg-[var(--very-dark-gray)] justify-center opacity-100 hover:opacity-70 active:opacity-50 focus:outline-none cursor-pointer" type="button">
