--- a/public/index.html
+++ b/public/index.html
@@ -148,7 +148,7 @@
           <p>Our modern furniture store provide a high level of quality. Our company has invested in advanced technology to ensure that every product is made as perfect and as consistent as possible. With three decades of experience in this industry, we understand what customers want for their home and office.</p>
         </article>
         <button class="flex justify-center 2xl:justify-start items-center gap-8 lg:gap-4 pt-10 lg:pt-6 cursor-pointer hover:text-[var(--dark-gray)] group">
-          <p class="font-bold sm:tracking-[1rem] lg:tracking-[.6rem]">SHOP NOW</p>
+          <span class="font-bold sm:tracking-[1rem] lg:tracking-[.6rem]">SHOP NOW</span>
           <svg width="40" height="12" xmlns="http://www.w3.org/2000/svg" class="group-hover:fill-[var(--dark-gray)]"><path d="M34.05 0l5.481 5.527h.008v.008L40 6l-.461.465v.063l-.062-.001L34.049 12l-.662-.668 4.765-4.805H0v-1h38.206l-4.82-4.86L34.05 0z" fill="currentColor" fill-rule="nonzero"/></svg>
         </button>
       </div>
