--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,7 @@
 </head>
 <body class="text-base relative">
   <header class="w-full">
+    <h1 class="sr-only">Room - Modern Furniture Shop</h1>
     <!-- Header para Móvil -->
     <div class="block absolute top-0 left-0 z-100 lg:hidden w-full">
       <nav class="header__nav bg-transparent" id="navbar" aria-label="Main Navigation">
