--- a/public/index.html
+++ b/public/index.html
@@ -116,20 +116,23 @@
                   srcset="images/desktop-image-hero-3.jpg">
           <img src="images/desktop-image-hero-3.jpg" alt="Vintage-style tubular black chair with a sleek metal frame" class="w-full min-h-full object-fill" style="height: 100%;">
         </picture>
-        <div class="controls absolute bg-black bottom-0 right-0 lg:translate-x-full flex cursor-pointer">
-          <button class="carousel-control-prev py-4 flex items-center hover:bg-[var(--very-dark-gray)] justify-center opacity-100 hover:opacity-70 active:opacity-50 focus:outline-none cursor-pointer" type="button" aria-label="Previous slide">
+        <div class="controls absolute bg-black bottom-0 right-0 lg:translate-x-full flex">
+          <button class="carousel-control-prev py-4 flex items-center justify-center opacity-100 hover:opacity-70 active:opacity-50 focus:ring-2 focus:ring-white cursor-pointer" 
+          type="button" aria-labelledby="prev-label">
             <span class="carousel-control-prev-icon" aria-hidden="true">
-              <img src="./images/icon-angle-left.svg" alt="arrow-previous">
+      <img src="./images/icon-angle-left.svg" alt="">
             </span>
-            <span class="hidden">Previous</span>
+            <span class="sr-only" id="prev-label">Previous</span>
           </button>
-          <button class="carousel-control-next py-4 flex items-center hover:bg-[var(--very-dark-gray)] justify-center opacity-100 hover:opacity-70 active:opacity-50 focus:outline-none cursor-pointer " type="button" aria-label="Next slide">
+          <button class="carousel-control-next py-4 flex items-center justify-center opacity-100 hover:opacity-70 active:opacity-50 focus:ring-2 focus:ring-white cursor-pointer"
+                  type="button" aria-labelledby="next-label">
             <span class="carousel-control-next-icon" aria-hidden="true">
-              <img src="./images/icon-angle-right.svg" alt="arrow-next">
+              <img src="./images/icon-angle-right.svg" alt="">
             </span>
-            <span class="hidden">Next</span>
+            <span class="sr-only" id="next-label">Next</span>
           </button>
         </div>
+
       </div>
       <div class="hero-text py-14 px-8 lg:py-18 lg:px-18 2xl:px-24 lg:w-2/5 2xl:flex 2xl:flex-col 2xl:justify-center">
         <article class="hero-text-1">
